# tinyalert

./: .dockerignore  .envrc  .flake8  .gitignore  BUILD  Dockerfile  LICENSE  README.md  action.yml  devenv.nix  devenv.yaml  flake.nix  pants.toml  pyproject.toml
.github/workflows/: check-dist.yaml  integration.yaml  release.yaml  test.yaml
integration/: critical.toml  kitchen-sink.toml  smoke.toml
scripts/: local-build.sh  pants-with-snapshot-sandbox.sh
setup/: action.yml
src/tinyalert/: BUILD  __main__.py  alembic.ini  api.py  cli.py  cli_helpers.py  db.py  reporters.py  types.py
src/tinyalert/alembic/: BUILD  env.py
src/tinyalert/alembic/versions/: 2e32d886a3b7_add_skipped_column_and_remove_ignore.py  3eb91cd00239_add_generation_column.py  966c7e56d944_add_measure_source_column.py  9cb828bece2f_add_epoch_column.py  a89fc25c0947_add_tags_column.py  cabfb49f9f42_initial.py
tests/: BUILD  conftest.py  test_api.py  test_cli.py  test_cli_helpers.py  test_reporters.py  test_types.py
tests/__fixtures__/: BUILD  api_prune_empty_db.toml  api_prune_keep_auto.toml  api_prune_keep_auto_current_epoch_all_skipped.toml  api_prune_keep_auto_single_eligible_point.toml  api_prune_keep_last.toml  api_prune_keep_last_not_enough_points.toml  api_prune_keep_last_single_eligible_point.toml  api_prune_keep_within.toml  api_prune_keep_within_counts_from_baseline.toml  api_prune_keep_within_keeps_previous_epoch.toml  api_prune_keep_within_not_enough_points.toml  api_prune_keep_within_single_eligible_point.toml  api_prune_multiple_metrics.toml  api_prune_no_keep.toml
tests/__snapshots__/: test_reporters.ambr
