[tool.isort]
profile = "black"

[tool.poetry]
name = "tinyalert"
version = "0.1.0"
description = ""
authors = ["ento"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "tinyalert", from = "src" },
]

[tool.poetry.scripts]
tinyalert = 'tinyalert:__main__'

[tool.poetry.dependencies]
python = ">=3.8.16, <3.12"
alembic = "^1.10.4"
cattrs = "^24.1.1"
attrs = "^24.2.0"
click = "^8.1.3"
sqlalchemy = {git = "https://github.com/sqlalchemy/sqlalchemy.git", rev = "29c2c15902094965f9dca66efae33305f09c3878"}
tabulate = "^0.9.0"
termcolor = "^2.2.0"
tomli = "^2.0.1"
zipp = "^3.19.1" # security remediation: CVE-2024-5569

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-freezer = "^0.4.8"
syrupy = "^4.0.2"
tomli-w = "^1.0.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
